backend1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ingress-nginx
  labels:
    role: backend
    env: demo
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      role: backend
  template:
    metadata:
      labels:
        role: backend
    spec:
      containers:
      - name: backend
        image: public.ecr.aws/w8u5e4v2/workshop-backend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /ok
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 5
        readinessProbe:
          httpGet:
             path: /ok
             port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1

---
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ingress-nginx
spec:
  ports:
  - port: 8080
    protocol: TCP
  type: ClusterIP
  selector:
   role: backend
