backendgreen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-green
  namespace: ingress-nginx
  labels:
    role: backend
    env: demo
    deployment: green
spec:
  replicas: 2
  selector:
    matchLabels:
      role: backend
      deployment: green
  template:
    metadata:
      labels:
        role: backend
        deployment: green
    spec:
      containers:
      - name: backend
        image: selokarr/backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /ok
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 5
        readinessProbe:
          httpGet:
             path: /ok
             port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1

---
---
apiVersion: v1
kind: Service
metadata:
  name: green-backend
  namespace: ingress-nginx
spec:
  ports:
  - port: 8080
    protocol: TCP
  type: ClusterIP
  selector:
   role: backend
   deployment: green
