frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ingress-nginx
  labels:
    role: frontend
    env: demo
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec:
      containers:
      - name: frontend
        image: public.ecr.aws/e3i3d3z5/three-tier-frontend-d:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ingress-nginx
spec:
  ports:
  - port: 3000
    protocol: TCP
  type: ClusterIP
  selector:
   role: frontend
