frontendgreen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green	
  namespace: ingress-nginx
  labels:
    role: frontend
    env: demo
    app: green
spec:
  replicas: 2
  selector:
    matchLabels:
      role: frontend
      app: green
  template:
    metadata:
      labels:
        role: frontend
        app: green
    spec:
      containers:
      - name: frontend
        image: selokarr/frontendg:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: green-frontend
  namespace: ingress-nginx
spec:
  ports:
  - port: 3000
    protocol: TCP
  type: ClusterIP
  selector:
   role: frontend 
   app: green
